# PReloaded

./: .gitattributes  .gitignore  .gitmodules  Build.cmake  Build.cmd  CMakeFOClassic.txt  CMakeLists.txt  README.md
Client/: FOnline.cfg
Server/: Server.cfg
Server/extensions/: FOClassic.h  extensions.sln
Server/extensions/FOClassic/: CommandLine.h  Ini.h
Server/extensions/IntellisenseCreator/: IntellisenseCreator.vcxproj  IntellisenseCreator.vcxproj.filters
Server/extensions/MapperUtils/: MapperUtils.vcxproj  MapperUtils.vcxproj.filters
Server/extensions/Utils/: Utils.vcxproj  Utils.vcxproj.filters
Server/extensions/check_look/: check_look.vcxproj  check_look.vcxproj.filters
Server/extensions/client_parameters/: client_parameters.vcxproj  client_parameters.vcxproj.filters
Server/extensions/client_utils/: client_utils.vcxproj  client_utils.vcxproj.filters
Server/extensions/online_stats/: online_stats.vcxproj
Server/extensions/parameters/: parameters.vcxproj
Server/maps/: Locations.cfg  start_location.fomap
Server/proto/items/: weapon.fopro
Server/scripts/: FOClassic.fos  ITEMPID.H  _client_defines.fos  _defines.fos  _dialogs.fos  broadcast.fos  buffer_lazy.fos  client_container_addons.fos  client_interface.fos  client_io.fos  client_main.fos  client_messages.fos  client_smart_cursor.fos  client_smart_cursor_h.fos  config.fos  devconnect.fos  itempid.fos  lexems.fos  main.fos  mapper_crtypes.fos  mapper_main.fos  pdata.fos  prod_ingredients.fos  prod_plant_fiber.fos  prod_table_brahmin.fos  recycler.fos  scripts.cfg  serializator.fos  utils_h.fos
Server/scripts/_solution/: Reloaded.sln
Server/scripts/extensions/: as.fos
Source/Extensions/: CMakeLists.txt  PReloaded.cpp  PReloaded.h
Source/Extensions/AS/: AS.cpp  AS.h
Source/Extensions/BufferLazy/: BufferLazy.cpp  BufferLazy.h
Source/Extensions/CheckLook/: CheckLook.cpp  CheckLook.h  Lookup.cpp  Move.h  WallDist.cpp  WallDist.h
Source/Extensions/MapperUtils/: MapperUtils.cpp  MapperUtils.h
Source/Extensions/Parameters/: Parameters.cpp  Parameters.h
Source/Extensions/Utils/: ExtEvents.cpp  ExtEvents.h  PUtils.cpp  PUtils.h  ProtoMapEx.cpp  ProtoMapEx.h
Tools/CritableEditor/CritableEditor/: CritableEditor.csproj  Data.HTML.cs  Data.Static.cs  Data.cs  MainForm.Designer.cs  MainForm.cs
Tools/FOCommon/Parsers/: DefineParser.cs  DialogListParser.cs  EncounterGroupParser.cs  MapParser.cs  ScriptListParser.cs
Tools/FOMonitor/: FOMonitor.csproj  FOMonitor.sln  IniReader.cs  LogParser.cs  Map.cs  Player.cs  Program.cs  Serializer.cs  ServerData.cs  Utils.cs  frmBlacklist.Designer.cs  frmBlacklist.cs  frmMain.Designer.cs  frmMain.cs  frmWhitelist.Designer.cs  frmWhitelist.cs
Tools/FOMonitor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Tools/FonlineReloaded_Critter_Editor/_komponenty/GraphicEx/: GraphicEx.dcu
Tools/ObjectEditor/: Config.cs  Data.cs  frmMain.cs  frmOptions.Designer.cs  frmOptions.cs
Tools/WorldEditor/: ArmorProto.cs  Compiler.cs  Config.cs  DebugManager.cs  Display.cs  Drawing.cs  EditorData.cs  ItemPid.cs  Message.cs  Program.cs  Structs.cs  TableSerializer.cs  Utils.cs  WorldEditor.csproj  WorldEditor.sln  frmAbout.Designer.cs  frmAbout.cs  frmAbout.resx  frmAddFlag.Designer.cs  frmAddFlag.cs  frmAddGroup.Designer.cs  frmAddGroup.cs  frmAddLocation.Designer.cs  frmAddLocation.cs  frmAddMaps.Designer.cs  frmAddMaps.cs  frmBrush.Designer.cs  frmBrush.cs  frmEditGroup.Designer.cs  frmEditGroup.cs  frmEditLocation.Designer.cs  frmEditLocation.cs  frmEditMap.Designer.cs  frmEditMap.cs  frmEditSpecialEncounter.Designer.cs  frmEditSpecialEncounter.cs  frmEditTownMap.Designer.cs  frmEditTownMap.cs  frmGenerateDefines.Designer.cs  frmGenerateDefines.cs  (+22 more)
Tools/WorldEditor/Commandline/: Commandline.cs
Tools/WorldEditor/Controls/: Console.cs
Tools/WorldEditor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Tools/WorldEditor/ProtoEditor/: Consts.cs  ParamsDefines.cs  ProtoCritter.cs  ProtoManager.cs  frmCritterProtoList.Designer.cs  frmCritterProtoList.cs  frmProtoCritterEditor.Designer.cs  frmProtoCritterEditor.cs  frmProtoCritterRawEditor.Designer.cs  frmProtoCritterRawEditor.cs
Tools/WorldEditor/Scripting/: Bindings.cs  ScriptManager.cs
Tools/WorldEditor/WorldMap/: Condition.cs  Copy.cs  EncounterZoneGroup.cs  EncounterZoneLocation.cs  Filtering.cs  SpecialEncounter.cs  WorldMap.cs  WorldMapFormat.cs  Zone.cs  ZoneStatistics.cs
Tools/WorldEditor/WorldMap/EncounterGroup/: Filtering.cs  frmEncounterGroupEditor.Designer.cs  frmEncounterGroupEditor.cs  frmFilter.Designer.cs  frmFilter.cs  frmSelectObject.Designer.cs  frmSelectObject.cs
